Use break-word instead of break-all to avoid breaks in words.

--- a/assets/scss/_forums.scss
+++ b/assets/scss/_forums.scss
@@ -95,7 +95,7 @@
   grid-area: content;
   background-color: white;
   padding: 4px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .l-forum-single-post--dark > .c-single-post-content {
